FINAL UPDATE (beta)

--- a/aurasynth-frontend/package.json
+++ b/aurasynth-frontend/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@magenta/music": "^1.23.1",
     "@tailwindcss/vite": "^4.0.8",
+    "@tonejs/midi": "^2.0.28",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -21,15 +23,24 @@
     "express": "^4.21.2",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
+    "jzz": "^1.9.3",
+    "jzz-gui-player": "^1.7.8",
+    "jzz-midi-smf": "^1.9.8",
+    "jzz-synth-tiny": "^1.4.3",
     "lucide-react": "^0.475.0",
+    "midi-player-js": "^2.0.16",
     "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-midi-player": "^1.0.8",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.8"
+    "soundfont-player": "^0.12.0",
+    "tailwindcss": "^4.0.8",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
